# KCore

./: .buildconfig  .gitignore  CMakeLists.txt  TODO
include/: CMakeLists.txt
include/base/: types.h
include/debuging/: call_stace_trace.h  logging.h  signal_handler.h
include/networking/: http.h.bak  http_definitions.h  http_request.h  http_response.h  http_response.h.bak  simple_http_request.h
include/networking/socket/: socket.h
include/tools/: format_string.h  iobytestream.h2  istream_iterator.h  istream_tools.h  memory_streambuf.h  streambuf.h
scripts/: echo_server.py
src/: CMakeLists.txt
tests/: CMakeLists.txt
tests/logging/: main.cpp
tests/networking/: main.cpp
tests/socket/: main.cpp
tests/streambuffer/: main.cpp
tools/Linux/: bsdtar
